[gd_scene load_steps=9 format=3 uid="uid://btqwcxy4oeq31"]

[ext_resource type="Script" path="res://scenes/status_labels/status_labels.gd" id="1_82td2"]
[ext_resource type="Theme" uid="uid://ivvnre0jtvlo" path="res://main_theme.tres" id="2_d67al"]

[sub_resource type="LabelSettings" id="LabelSettings_dq41r"]
font_size = 20
font_color = Color(0.552941, 0.611765, 0.576471, 1)
outline_color = Color(1, 0.67451, 0.623529, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ieqxu"]
font_size = 20
font_color = Color(0.552941, 0.611765, 0.576471, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jhllp"]
font_size = 20
font_color = Color(0.552941, 0.611765, 0.576471, 1)

[sub_resource type="Animation" id="Animation_bcdog"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AwaitingSignInLabel:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.552941, 0.611765, 0.576471, 1)]
}

[sub_resource type="Animation" id="Animation_kuo71"]
resource_name = "sign_in_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AwaitingSignInLabel:label_settings:font_color")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(0.890196, 0.298039, 0.231373, 1), Color(0.552941, 0.611765, 0.576471, 1), Color(0.890196, 0.298039, 0.231373, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_suei6"]
_data = {
"RESET": SubResource("Animation_bcdog"),
"sign_in_animation": SubResource("Animation_kuo71")
}

[node name="StatusLabels" type="HBoxContainer"]
offset_right = 750.0
offset_bottom = 37.0
theme_override_constants/separation = 25
alignment = 1
script = ExtResource("1_82td2")

[node name="AwaitingSignInLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_d67al")
text = "Awaiting Sign In"
label_settings = SubResource("LabelSettings_dq41r")

[node name="ShiftLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_d67al")
text = "Shift In Progress"
label_settings = SubResource("LabelSettings_ieqxu")

[node name="AwaitingAlarmsLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_d67al")
text = "Awaiting Alarms"
label_settings = SubResource("LabelSettings_jhllp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_suei6")
}
autoplay = "sign_in_animation"
